--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,13 @@
 	 <meta name="description" content="Map of Austin Buildings Whom Recycle">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui=yes">
 <!-- 	LINKS -->
- <link rel="stylesheet" href="../css/main.css" type="text/css">
+ <link rel="stylesheet" href="css/main.css" type="text/css">
 
 </head>
 <body>
-	
+
 	<!-- 	scripts -->
 	<div id="app">Loading</div>
-	<script type="text/javascript" src="build/js/main.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
