--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui=yes">
 <!-- 	LINKS -->
  <link rel="stylesheet" href="css/main.css" type="text/css">
+<!--  LEAFLET CSS -->
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 
 </head>
 <body>
@@ -14,5 +16,6 @@
 	<!-- 	scripts -->
 	<div id="app">Loading</div>
 	<script type="text/javascript" src="js/main.js"></script>
+	 <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 </body>
 </html>
