--- a/client/index.html
+++ b/client/index.html
@@ -3,19 +3,26 @@
 <head>
 	<title>Recycle ATX</title>
 	<meta charset="UTF-8">
-	 <meta name="description" content="Map of Austin Buildings Whom Recycle">
+	<meta name="description" content="Map of Austin Buildings Whom Recycle">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui=yes">
 <!-- 	LINKS -->
- <link rel="stylesheet" href="css/main.css" type="text/css">
-<!--  LEAFLET CSS -->
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+	<link href='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.css' rel='stylesheet' />
+	<link rel="stylesheet" href="css/main.css" type="text/css">
+
 
 </head>
 <body>
 
 	<!-- 	scripts -->
 	<div id="app">Loading</div>
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+	<script src='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.js'></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	 <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 </body>
 </html>
