setup geocoder, add location search

--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
 <body>
 	<!-- 	scripts -->
 	<div id="app">Loading</div>
+	<script src="https://maps.googleapis.com/maps/api/js" async defer></script>
 	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 	<script src='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.js'></script>
 	<script type="text/javascript" src="js/main.js"></script>
