--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/main.css" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <!-- scripts -->
