--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Recycle ATX</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Map of Austin Buildings Whom Recycle">
+  <meta name="description" content="Map of Austin Buildings That DO NOT Recycle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
   <link href='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.css' rel='stylesheet' />
